[package]
name = "playground"
description = "A collection of half-baked, likely buggy, throw-away experiments"
version = "0.1.0"
authors = ["Rafael Varago <varago.rafael@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "hlist",
    "partition",
    "reader",
    "sized_vector",
]

[dependencies]
